--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>eu.scapeproject.model</groupId>
+			<groupId>eu.scape-project.model</groupId>
 			<artifactId>scape-platform-datamodel</artifactId>
-			<version>0.1.4-SNAPSHOT</version>
+			<version>0.1.6-SNAPSHOT</version>
 		</dependency>
 		<!-- dependency>
 			<groupId>de.congrace</groupId>
