--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,43 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
+ 	<parent>
+    	<groupId>org.sonatype.oss</groupId>
+    	<artifactId>oss-parent</artifactId>
+    	<version>7</version>
+  	</parent>
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>eu.scape-project</groupId>
 	<artifactId>loader-app</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	
+	
+	<organization>
+    	<name>The SCAPE Consortium</name>
+    	<url>http://scape-project.eu</url>
+  	</organization>
+  	<licenses>
+    	<license>
+      		<name>The Apache Software License, Version 2.0</name>
+      		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      		<distribution>repo</distribution>
+    	</license>
+  	</licenses>
+  	<inceptionYear>2010</inceptionYear>
+  	<ciManagement>
+    	<system>Jenkins, hosted by OPF</system>
+    	<url>http://jenkins.opf-labs.org</url>
+  	</ciManagement>
+  	<scm>
+    	<url>http://github.com/openplanets</url>
+  	</scm>
+  	<properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
+  	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>eu.scape-project.model</groupId>
